--- a/app/code/Mtwoe/ProductMenu/view/adminhtml/layout/productmenu_index_index.xml
+++ b/app/code/Mtwoe/ProductMenu/view/adminhtml/layout/productmenu_index_index.xml
@@ -15,7 +15,7 @@
     <update handle="editor"/>
     <body>
     <referenceContainer name="content">
-        <uiComponent name="product_menu_user_form"/>
+        <uiComponent name="productmenu_user_form"/>
     </referenceContainer>
     </body>
 </page>
