--- a/app/code/Mtwoe/ProductMenu/view/adminhtml/layout/productmenu_products_edit.xml
+++ b/app/code/Mtwoe/ProductMenu/view/adminhtml/layout/productmenu_products_edit.xml
@@ -15,7 +15,7 @@
     <update handle="editor"/>
     <body>
         <referenceContainer name="content">
-            <uiComponent name="product_menu_edit_form"/>
+            <uiComponent name="productmenu_edit_form"/>
         </referenceContainer>
     </body>
 </page>
